# cpp-remote-desktop

./: CMakeLists.txt
src/server/: main.cpp
